@@ -6,6 +6,7 @@
 * Fixed crash in taskbar after visible task changed name then gone.
 * Ensured panel background update after some plugin was resized.
 * FileManager statement from old config should never be scanned again.
+* Fixed positioning of new created panel, the edge was not saved.
 
 0.7.1
 -------------------------------------------------------------------------
